--- a/res/layout/activity_product_details.xml
+++ b/res/layout/activity_product_details.xml
@@ -33,14 +33,18 @@
                 android:layout_marginRight="5dp"
                 android:orientation="vertical" >
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" >
 
                     <ImageView
                         android:id="@+id/prod_det_image"
                         style="@style/productImage"
-                        android:layout_weight="70"
+                        android:layout_width="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignTop="@+id/edit_prod_name"
+                        android:layout_marginLeft="16dp"
+                        android:contentDescription="@string/image_product_content_description"
                         android:src="@android:drawable/ic_menu_gallery" />
 
                     <EditText
@@ -48,10 +52,13 @@
                         style="@style/inputBox"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="30"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/prod_det_image"
                         android:ems="10"
                         android:hint="@string/name_hint" />
-                </LinearLayout>
+
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="fill_parent"
